<resources>
    <string name="app_name">Fitness Training</string>
    <string name="action_settings">Settings</string>

    <string name="btn_workouts">Workouts</string>
    <string name="btn_stats">My Stats</string>
    <string name="btn_log">My Log</string>

    <string name="btn_createworkout">Create Workout</string>

    <string name="btn_addExercise">Add to Workout</string>
    <string name="btn_makeWorkout">Finish</string>

    <string name="btn_startworkout">Begin!</string>

    <string name="btn_nextexercise">Next</string>

    <string name="img_running_man">Man Jogging</string>
    <string name="img_exercise">Exercise</string>

    <string name="text_workouttitle">Select A Workout</string>
    <string name="text_myworkouts">My Workouts</string>
    <string name="text_createworkout">Create your own Workout:</string>

    <string name="text_nameworkout">Workout Name:</string>
    <string name="text_restTime">Rest Time:</string>
    <string name="text_selectedExercises">Selected Exercises: (tap to remove)</string>

    <string name="text_startworkout">Start this Workout?</string>

    <string name="text_workoutlog">Workout Log</string>

    <string name="text_mystats">My Stats</string>
    <string name="text_workoutText">Workouts</string>
    <string name="text_exerciseText">Exercises</string>

    <string name="desc_workoutName">name</string>
    <string name="desc_restTime">time (Seconds)</string>
</resources>
